--- a/.github/pwa/manifest.json
+++ b/.github/pwa/manifest.json
@@ -470,7 +470,7 @@
       "description": ""
     }
   ],
-  "id": "Eltirosto/Degrees-of-Lewdity-Chinese-Localization",
+  "id": "ParticleG/dol-pwa",
   "lang": "zh",
   "display_override": [
     "window-controls-overlay",
