--- a/.github/pwa/manifest.json
+++ b/.github/pwa/manifest.json
@@ -467,7 +467,7 @@
     {
       "name": "Main",
       "url": "/",
-      "description": ""
+      "description": "Main page"
     }
   ],
   "id": "ParticleG/dol-pwa",
