--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,11 @@ on:
     - cron: "0 20 * * *"
   workflow_dispatch:
 
+env:
+  RELEASE_ARTIFACT_NAME: dol_release_package
+  RELEASE_ARTIFACT_PATH: ./dol-release.zip
+  RELEASE_FOLDER_PATH: ./dol-release
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,15 +25,15 @@ jobs:
       - name: Extract downloaded file
         run: |
           echo "Downloaded Chinese version DOL: ${{ steps.getRelease.outputs.tag_name }}"
-          unzip -q ${{ fromJson(steps.getRelease.outputs.downloaded_files)[0] }} -d dol-release
+          unzip -q ${{ fromJson(steps.getRelease.outputs.downloaded_files)[0] }} -d ${{ env.RELEASE_FOLDER_PATH }}
       - name: Construct PWA
         run: |
-          cp -r .github/pwa/* dol-release/
-          mv "dol-release/Degrees of Lewdity.html" dol-release/index.html
+          cp -r .github/pwa/* ${{ env.RELEASE_FOLDER_PATH }}
+          mv "${{ env.RELEASE_FOLDER_PATH }}/Degrees of Lewdity.html" ${{ env.RELEASE_FOLDER_PATH }}/index.html
       - name: Modify HTML
         shell: python3 {0}
         run: |
-          with open("dol-release/index.html", "r+", encoding="utf-8") as index_html_file:
+          with open("${{ env.RELEASE_FOLDER_PATH }}/index.html", "r+", encoding="utf-8") as index_html_file:
             index_html = index_html_file.read()
             insert_index = index_html.find("<head>") + 7
             index_html = index_html[:insert_index] + \
@@ -43,20 +48,32 @@ jobs:
             index_html_file.seek(0)
             index_html_file.truncate()
             index_html_file.write(index_html)
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v25
+      - name: Pack release artifact
+        run: |
+          7z a ${{ env.RELEASE_ARTIFACT_PATH }} ${{ env.RELEASE_FOLDER_PATH }}/*
+      - name: Upload release artifact
+        uses: actions/upload-artifact@v3
         with:
-          github-comment: false
-          vercel-args: --prod
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_TEAM_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: dol-release
+          name: ${{ env.RELEASE_ARTIFACT_NAME }}
+          path: ${{ env.RELEASE_ARTIFACT_PATH }}
+
+  deploy-github:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download release artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ env.RELEASE_ARTIFACT_NAME }}
+      - name: Unzip release artifact
+        run: |
+          unzip -q ${{ env.RELEASE_ARTIFACT_PATH }} -d ${{ env.RELEASE_FOLDER_PATH }}
       - name: Modify manifest.json
         shell: python3 {0}
         run: |
           import json
-          with open("dol-release/manifest.json", "r+", encoding="utf-8") as manifest_file:
+          with open("${{ env.RELEASE_FOLDER_PATH }}/manifest.json", "r+", encoding="utf-8") as manifest_file:
             manifest_json = json.loads(manifest_file.read())
             manifest_json["scope"] = "/dol-pwa/"
             manifest_json["start_url"] = "/dol-pwa/"
@@ -69,8 +86,28 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          build_dir: dol-release
+          build_dir: ${{ env.RELEASE_FOLDER_PATH }}
           keep_history: false
           target_branch: gh-pages
-      
-            
+
+  deploy-vercel:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download release artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ env.RELEASE_ARTIFACT_NAME }}
+      - name: Unzip release artifact
+        run: |
+          unzip -q ${{ env.RELEASE_ARTIFACT_PATH }} -d ${{ env.RELEASE_FOLDER_PATH }}
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v25
+        with:
+          github-comment: false
+          vercel-args: --prod
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_TEAM_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          working-directory: ${{ env.RELEASE_FOLDER_PATH }}
