--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,9 +57,42 @@ jobs:
           name: ${{ env.RELEASE_ARTIFACT_NAME }}
           path: ${{ env.RELEASE_ARTIFACT_PATH }}
 
-  deploy-github:
+  apply-mods:
     runs-on: ubuntu-latest
     needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download release artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ env.RELEASE_ARTIFACT_NAME }}
+      - name: Unzip release artifact
+        run: |
+          unzip -q ${{ env.RELEASE_ARTIFACT_PATH }} -d ${{ env.RELEASE_FOLDER_PATH }}
+      - name: Apply 'Degrees of Lewdity Graphics Mod'
+        env:
+          MOD_FOLDER_PATH: ./degrees-of-lewdity-graphics-mod
+        run: |
+          mkdir ${{ env.MOD_FOLDER_PATH }}
+          pushd ${{ env.MOD_FOLDER_PATH }}
+          wget -q https://gitgud.io/BEEESSS/degrees-of-lewdity-graphics-mod/-/raw/master/img.zip?ref_type=heads
+          unzip -q ./img.zip
+          rm img.zip
+          popd
+          mv -f ${{ env.MOD_FOLDER_PATH }}/* ${{ env.RELEASE_FOLDER_PATH }}
+          rm -rf ${{ env.MOD_FOLDER_PATH }}
+      - name: Pack release artifact
+        run: |
+          7z a ${{ env.RELEASE_ARTIFACT_PATH }} ${{ env.RELEASE_FOLDER_PATH }}/*
+      - name: Upload release artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ env.RELEASE_ARTIFACT_NAME }}
+          path: ${{ env.RELEASE_ARTIFACT_PATH }}
+
+  deploy-github:
+    runs-on: ubuntu-latest
+    needs: apply-mods
     steps:
       - uses: actions/checkout@v3
       - name: Download release artifact
@@ -94,7 +127,7 @@ jobs:
 
   deploy-vercel:
     runs-on: ubuntu-latest
-    needs: build
+    needs: apply-mods
     steps:
       - uses: actions/checkout@v3
       - name: Download release artifact
@@ -117,7 +150,7 @@ jobs:
   post-build:
     runs-on: ubuntu-latest
     if: ${{ always() }}
-    needs: [build, deploy-github, deploy-vercel]
+    needs: [deploy-github, deploy-vercel]
     steps:
       - name: Cleanup
         uses: geekyeggo/delete-artifact@v2
